--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 
 add_executable(bobik_bridge src/bobik_bridge.cpp)
 
@@ -25,6 +28,9 @@ ament_target_dependencies(
   rclcpp
   std_msgs
   geometry_msgs
+  nav_msgs
+  tf2
+  tf2_geometry_msgs
 )
 
 install(TARGETS
